# p-peg

./: .env.example  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PEG_MECHANICS.md
program/: Cargo.toml
program/src/: error.rs  instruction.rs
program/src/engine/: creature_gen.rs  mod.rs  peg.rs
program/src/instructions/: deposit.rs  evolve.rs  liquidate.rs  mint_pegged.rs  mod.rs  redeem.rs  reroll.rs  spawn_creature.rs  update_config.rs
program/src/state/: config.rs  oracle.rs  vault.rs
sdk/: package.json  tsconfig.json
sdk/src/: index.ts  instructions.ts  pda.ts
tests/: peg_math.rs  state_serde.rs
